# Image-Recognition

./: .gitignore  CMakeLists.txt  Image-Recognition.sln  Image-Recognition.vcxproj  Image-Recognition.vcxproj.filters  bind.cpp  camera_handler.cpp  camera_handler.h  cascade_handler.cpp  cascade_handler.h  detector_handler.cpp  detector_handler.h  image.cpp  image.h  main.cpp
assets/: haarcascade_traffic_cone.xml
src/: bind.cpp  bind.h  camera_handler.cpp  camera_handler.h  cascade_handler.cpp  cascade_handler.h  header.h  image.cpp  image.h  main.cpp  rect.cpp  rect.h
